--- a/src/app/app-form/app-form.component.html
+++ b/src/app/app-form/app-form.component.html
@@ -1,3 +1,8 @@
 <input type="text" [(ngModel)] = "userName" >
-<button class="btn btn-primary" [disabled] = "!userName" (click) = "resetUserName()">Reset</button>
+<button
+  class="btn btn-primary"
+  [disabled] = "!userName"
+  (click) = "resetUserName()">
+  Reset
+</button>
 <p>{{ userName }}</p>
